Address pmd violations